--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,22 @@
+
 h1 {
-  font-size: 50px;
+  display: flex;
+  justify-content: center;
+  font-size: 100px;
+}
+
+body {
+  background-image: url('Artboard 1@108x.png');
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 section {
-  margin: 25px 0
+  margin: 25px 0;
+}
+
+nav a {
+  color: white
 }
 
 .center-card {
@@ -38,6 +51,24 @@ section {
   margin-bottom: 20px;
 }
 
-.dogModal-text {
-  text-align: center;
+.dog-modal img {
+  width: 100%;
+  height: 100%px;
+}
+
+.center-dogCard img {
+  width: 100%;
+  height: 80%;
+  object-fit: cover;
+}
+
+.dog-section {
+  max-height: 75vh;
+  margin-bottom: 10px;
+  overflow: scroll;
+}
+
+.woof-list {
+  display: flex;
+  justify-content: space-between;
 }
