--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,5 @@
 h1 {
-  display: flex;
-  justify-content: center;
-  font-size: 100px;
+  font-size: 50px;
 }
 
 body {
@@ -17,6 +15,12 @@ section {
 nav a {
   color: white;
 }
+
+nav a:hover {
+  text-decoration: none;
+  color: white;
+}
+
 
 .center-card {
   margin: 15px 0;
