--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,15 +12,67 @@ section {
   margin: 25px 0;
 }
 
+/* -----NAVBAR----- */
 nav a {
   color: white;
 }
 
 nav a:hover {
-  text-decoration: none;
   color: white;
 }
 
+.brand-logo {
+  width: 50px;
+  height: 50px;
+}
+
+/* -----INDEX PAGE----- */
+.arrow-right {
+  position: absolute;
+  display: block;
+  top: -150px;
+  left: 65px;
+}
+
+.arrow-left {
+  position: absolute;
+
+  display: block;
+  top: -150px;
+  left: 100px;
+}
+
+.index-box {
+  margin-top: 25vh;
+  text-align: center;
+  color: grey;
+}
+
+/* -----SIGNUP & LOGIN PAGE----- */
+.signup-login {
+  background-color: rgba(255, 255, 255, 0.5);
+  box-shadow: 10px 10px 15px 0px rgba(0, 0, 0, 0.75);
+}
+
+/* -----USER PROFILE----- */
+.user-profile {
+  color: grey;
+}
+
+.btn-profile {
+  color: grey;
+  box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.75);
+  text-transform: uppercase;
+  display: block;
+  margin: 0 auto;
+}
+
+/* -----CENTER LIST PAGE----- */
+.btn-dets {
+  color: grey;
+  box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.75);
+  text-transform: uppercase;
+}
 
 .center-card {
   margin: 15px 0;
@@ -43,6 +95,7 @@ nav a:hover {
   width: 100%;
 }
 
+/* -----ADOPTION PAGE----- */
 .dog-card img {
   width: 100%;
   height: 150px;
@@ -77,17 +130,9 @@ nav a:hover {
   overflow: scroll;
 }
 
-.woof-list {
-  display: flex;
-  justify-content: space-between;
-}
-
-.signup-login {
-  background-color: rgba(255, 255, 255, 0.5);
-  box-shadow: 10px 10px 15px 0px rgba(0, 0, 0, 0.75);
-}
-
 .calendar-container {
   background-color: rgba(255, 255, 255, 0.5);
   box-shadow: 10px 10px 15px 0px rgba(0, 0, 0, 0.75);
 }
+
+
